fix(ManageTokens): horizontal scroll in the table is off

--- a/packages/ui/src/ui/containers/ManageTokens/ManageTokensModalContent/ManageTokensModalContent.scss
+++ b/packages/ui/src/ui/containers/ManageTokens/ManageTokensModalContent/ManageTokensModalContent.scss
@@ -27,6 +27,7 @@
     &__tokens-table {
         max-height: 400px;
         overflow-y: scroll;
+        overflow-x: hidden;
     }
 
     &__table-cell {
